--- a/numpy_vectorize.ipynb
+++ b/numpy_vectorize.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQeJmHWbzNNiUWo4N3xoMF",
+      "authorship_tag": "ABX9TyNOhN00sqda3gkYaBCYIBTX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,26 +37,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "W-X5LyQS8uc7",
-        "outputId": "5aa1c289-0c9c-40d9-f7ed-b09a596eda7b"
+        "id": "W-X5LyQS8uc7"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "CPU times: user 256 ms, sys: 27.8 ms, total: 284 ms\n",
-            "Wall time: 317 ms\n",
-            "CPU times: user 1.76 ms, sys: 0 ns, total: 1.76 ms\n",
-            "Wall time: 1.77 ms\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import time\n",
@@ -94,27 +79,10 @@
         "%time vec_res2 = vec(arr)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mHmatxEr841b",
-        "outputId": "bcf46b00-2407-48a8-8c38-3e7503a4ff59"
+        "id": "mHmatxEr841b"
       },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "CPU times: user 602 ms, sys: 25.6 ms, total: 627 ms\n",
-            "Wall time: 656 ms\n",
-            "CPU times: user 6.72 ms, sys: 0 ns, total: 6.72 ms\n",
-            "Wall time: 6.75 ms\n",
-            "CPU times: user 303 ms, sys: 44.8 ms, total: 348 ms\n",
-            "Wall time: 349 ms\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -134,27 +102,10 @@
         "arr_a + arr_b   # op throws an error"
       ],
       "metadata": {
-        "id": "yn4mpsDeAb5J",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 184
-        },
-        "outputId": "e98f0516-f93a-42dc-a269-8b8d3966a3ce"
+        "id": "yn4mpsDeAb5J"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "operands could not be broadcast together with shapes (3,4,6,2) (3,5,1,2) ",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-115910927.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0marr_b\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0marr_a\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0marr_b\u001b[0m   \u001b[0;31m# op throws an error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,4,6,2) (3,5,1,2) "
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -174,109 +125,10 @@
         "arr_a + arr_b   # op goes through without throwing an error."
       ],
       "metadata": {
-        "id": "by-zV_xVRRc3",
-        "outputId": "e3ea00cd-355a-435e-836b-851e2f56c069",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "by-zV_xVRRc3"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[[[1.63675962, 0.19466167],\n",
-              "         [1.07098429, 0.29913873],\n",
-              "         [1.30106215, 0.3588118 ],\n",
-              "         [1.272093  , 0.59599698],\n",
-              "         [1.37746985, 0.46497825],\n",
-              "         [1.66796516, 0.26447034]],\n",
-              "\n",
-              "        [[1.15583582, 1.23454633],\n",
-              "         [1.01503699, 0.45005334],\n",
-              "         [1.27527708, 1.22208516],\n",
-              "         [1.33392596, 0.73736341],\n",
-              "         [1.37822719, 0.65361369],\n",
-              "         [1.23490786, 0.31507943]],\n",
-              "\n",
-              "        [[1.18838158, 1.04785656],\n",
-              "         [0.73323144, 1.22575565],\n",
-              "         [0.89120525, 1.31750994],\n",
-              "         [0.76562651, 1.77050593],\n",
-              "         [0.6199806 , 1.27710009],\n",
-              "         [1.06224342, 0.95825541]],\n",
-              "\n",
-              "        [[1.12830833, 1.41945998],\n",
-              "         [0.69488047, 1.48596639],\n",
-              "         [0.70555638, 1.44733117],\n",
-              "         [0.45270749, 1.33756364],\n",
-              "         [0.78244582, 1.35148627],\n",
-              "         [1.15105807, 1.50074612]]],\n",
-              "\n",
-              "\n",
-              "       [[[0.45137275, 0.91584046],\n",
-              "         [0.66094589, 1.22865596],\n",
-              "         [1.36873338, 1.2821505 ],\n",
-              "         [0.53479897, 0.76795289],\n",
-              "         [0.43787575, 0.64237028],\n",
-              "         [1.37871109, 0.97620706]],\n",
-              "\n",
-              "        [[0.89819361, 0.69376859],\n",
-              "         [1.37812181, 0.82411944],\n",
-              "         [0.91103849, 0.9676773 ],\n",
-              "         [1.24204712, 1.25024093],\n",
-              "         [1.37717811, 0.80211231],\n",
-              "         [1.30930421, 0.58602524]],\n",
-              "\n",
-              "        [[1.13275487, 0.79989495],\n",
-              "         [0.63390896, 0.32855278],\n",
-              "         [0.98150182, 0.20064713],\n",
-              "         [1.21592459, 0.68250328],\n",
-              "         [0.96287769, 0.66339008],\n",
-              "         [0.63127991, 0.68862131]],\n",
-              "\n",
-              "        [[0.45294545, 0.90353921],\n",
-              "         [1.16832484, 0.84086345],\n",
-              "         [0.65885885, 0.91313116],\n",
-              "         [1.01425284, 1.41650787],\n",
-              "         [1.05371784, 1.03716825],\n",
-              "         [1.16336926, 0.78757453]]],\n",
-              "\n",
-              "\n",
-              "       [[[1.13902045, 0.90356022],\n",
-              "         [0.57118771, 0.90996239],\n",
-              "         [1.02240236, 1.40035859],\n",
-              "         [0.52369879, 1.31439259],\n",
-              "         [0.31963378, 0.66338714],\n",
-              "         [0.48405396, 0.52390218]],\n",
-              "\n",
-              "        [[0.08920467, 1.26859639],\n",
-              "         [0.27916103, 0.46563078],\n",
-              "         [0.18252353, 0.69882152],\n",
-              "         [0.84408367, 0.63532388],\n",
-              "         [0.79974   , 0.84799814],\n",
-              "         [0.26223228, 1.09386306]],\n",
-              "\n",
-              "        [[0.31940217, 1.29752822],\n",
-              "         [0.15736398, 0.79793821],\n",
-              "         [0.43950618, 0.69191779],\n",
-              "         [0.65945912, 1.15436726],\n",
-              "         [0.77683119, 1.10373473],\n",
-              "         [0.55345324, 1.14701047]],\n",
-              "\n",
-              "        [[0.9438634 , 1.12531497],\n",
-              "         [1.58043928, 0.91011943],\n",
-              "         [1.07958547, 0.79189844],\n",
-              "         [1.34670675, 0.89698437],\n",
-              "         [1.25790217, 1.4770085 ],\n",
-              "         [1.63147416, 1.10682409]]]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -301,22 +153,10 @@
         "    sum += i*j"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JN-s7s4Dhowb",
-        "outputId": "d3076703-4989-413e-cf2b-843a7d905d16"
+        "id": "JN-s7s4Dhowb"
       },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "6.73 µs ± 113 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -336,28 +176,16 @@
         "arr1 = np.array([1, 2, 3])\n",
         "arr2 = np.array([4, 5])\n",
         "\n",
-        "arr1 = arr1[:, None]    # reshape to (3, 1)\n",
-        "arr2 = arr2[None, :]    # reshape to (1, 2)\n",
+        "arr1 = # add the missing code so that these two arrays can be broadcasted\n",
+        "arr2 = # add the missing code so that these two arrays can be broadcasted\n",
         "\n",
         "sum = (arr1 * arr2).sum()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OJ_wVMqZhsXp",
-        "outputId": "21b0e2e2-17e0-4d98-91f5-4731681cb4df"
+        "id": "OJ_wVMqZhsXp"
       },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "6.65 µs ± 626 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
