--- a/numpy_vectorize.ipynb
+++ b/numpy_vectorize.ipynb
@@ -161,7 +161,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Try to write the above operation using broadcasting to take advantage of numpy's vectorization.\n",
+        "Exercise 1: try to write the above operation using broadcasting to take advantage of numpy's vectorization.\n",
         "\n",
         "Hint: you can use [numpy.sum](https://numpy.org/doc/stable/reference/generated/numpy.sum.html) to sum together all elements in an array."
       ],
