--- a/cupy_gpu.ipynb
+++ b/cupy_gpu.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOncYiXnCJWtdJdTf8u1AxI",
+      "authorship_tag": "ABX9TyNJ8DHXvS5ZasNUBnn7Gs9x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,28 +31,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Some simple examples using cupy."
+        "## GPU computing using CuPy\n",
+        "\n",
+        "CuPy is an open-source array library for GPU-accelerated computing with Python. CuPy utilizes CUDA Toolkit libraries including cuBLAS, cuRAND, cuSOLVER, cuSPARSE, cuFFT, cuDNN and NCCL to make full use of the GPU architecture. Most operations perform well on a GPU using CuPy out of the box, and CuPy speeds up some operations more than 100X."
       ],
       "metadata": {
         "id": "w64SWru7gNt_"
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "9uwNfcuwgHuD"
-      },
-      "outputs": [],
-      "source": [
-        "import numpy as np\n",
-        "import cupy as cp"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "Many of the same numpy functions are available in cupy and numpy"
+        "## Interoperability\n",
+        "Many of the same numpy functions are available in cupy and numpy. You can simply swap out the 'np' for 'cp'."
       ],
       "metadata": {
         "id": "Onw6iClPhxDD"
@@ -61,6 +52,9 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
+        "import cupy as cp\n",
+        "\n",
         "x_cpu = np.array([1, 2, 3])\n",
         "l2_cpu = np.linalg.norm(x_cpu)\n",
         "x_gpu = cp.array([1, 2, 3])\n",
@@ -69,88 +63,13 @@
       "metadata": {
         "id": "RzUR7WJZgf5T"
       },
-      "execution_count": 28,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Cupy uses the concept of a **device**. If a node has more than one GPU, then arrays must be assigned to a specific GPU"
-      ],
-      "metadata": {
-        "id": "07MP8isJgztz"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "num_cuda = cp.cuda.runtime.getDeviceCount()\n",
-        "devices = []\n",
-        "for i in range(0, num_cuda):\n",
-        "    print(f'cuda:{i}')\n"
-      ],
-      "metadata": {
-        "id": "YRRdf7XMg8BZ"
-      },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "We can also use the device deteciton to make code choose which device to use. GPU if available, otherwise CPU"
-      ],
-      "metadata": {
-        "id": "NIj6rMDNk9mG"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "import cupy as cp\n",
-        "\n",
-        "if cp.cuda.runtime.getDeviceCount() == 0:\n",
-        "  xp = np\n",
-        "else: xp = cp\n",
-        "\n",
-        "x = xp.random.rand(50)"
-      ],
-      "metadata": {
-        "id": "YeWp1K9GlGgi"
-      },
-      "execution_count": 26,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "We can also create functions which check what array type they receive"
-      ],
-      "metadata": {
-        "id": "zFWQx8oKl1gP"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def softplus(x_in):\n",
-        "    xp = cp.get_array_module(x_in)  # 'xp' is a standard usage in the community\n",
-        "    print(\"Using:\", xp.__name__)\n",
-        "    return xp.maximum(0, x_in) + xp.log1p(xp.exp(-abs(x_in)))\n",
-        "\n",
-        "softplus(x)"
-      ],
-      "metadata": {
-        "id": "abiw1kEalIv5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "We cannot add together cumpy and cupy arrays because they are on different devices. Numpy is on the CPU, Cupy is on the GPU"
+        "We cannot add together cupy and cupy arrays because they are on different devices. Numpy is on the CPU, Cupy is on the GPU"
       ],
       "metadata": {
         "id": "yH3eIrnrmoy0"
@@ -185,7 +104,7 @@
       "metadata": {
         "id": "c5_f-suxm9_B"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -206,8 +125,148 @@
       "metadata": {
         "id": "objxo1d5nZXy"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PyTorch is a commonly-used machine learning framefork that provides high-performance, differentiable tensor operations. Because cupy and pytorch use the same cuda array interface, zero-copy data exchange between CuPy and PyTorch can be achieved at no cost.\n",
+        "\n",
+        "**However**, PyTorch creates CPU tensors by default, which do not have a cuda array interface. **Ensure that the tensor is already on GPU before trying to exchange!**"
+      ],
+      "metadata": {
+        "id": "9lJ9SzCz3Wqs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import cupy as cp\n",
+        "import torch\n",
+        "\n",
+        "\n",
+        "# convert a torch tensor to a cupy array\n",
+        "a = torch.rand((3, 3), device='cuda')\n",
+        "b = cp.asarray(a)\n",
+        "b *= b\n",
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b30EyFT47WZS",
+        "outputId": "00315459-6c93-45e9-fd8b-b6303f63c0cc"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2.9605372e-02, 9.3547893e-01, 4.9651889e-03],\n",
+              "       [2.8297067e-01, 5.8621979e-01, 8.2395057e-04],\n",
+              "       [8.2114160e-02, 6.0972279e-01, 1.4622790e-02]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# convert a cupy array to a torch tensor\n",
+        "a = cp.arange(10)\n",
+        "b = torch.as_tensor(a, device='cuda')\n",
+        "b += 3\n",
+        "b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3cgdzrKm7j6o",
+        "outputId": "ca465bee-5181-47ab-ca40-adfd779b39bf"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 3,  4,  5,  6,  7,  8,  9, 10, 11, 12], device='cuda:0')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## CPU/GPU agnostic code\n",
+        "\n",
+        "We can also use the device detection. The following code checks if a GPU is available, then uses cupy. If there are no GPUs, it will use numpy"
+      ],
+      "metadata": {
+        "id": "NIj6rMDNk9mG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import cupy as cp\n",
+        "\n",
+        "if cp.cuda.runtime.getDeviceCount() == 0:\n",
+        "  xp = np\n",
+        "else: xp = cp\n",
+        "\n",
+        "x = xp.random.rand(50)"
+      ],
+      "metadata": {
+        "id": "YeWp1K9GlGgi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can also create functions which check what array type they receive, and use numpy or cupy appropriately"
+      ],
+      "metadata": {
+        "id": "zFWQx8oKl1gP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def softplus(x_in):\n",
+        "    xp = cp.get_array_module(x_in)  # 'xp' is a standard usage in the community\n",
+        "    print(\"Using:\", xp.__name__)\n",
+        "    return xp.maximum(0, x_in) + xp.log1p(xp.exp(-abs(x_in)))\n",
+        "\n",
+        "softplus(x)"
+      ],
+      "metadata": {
+        "id": "abiw1kEalIv5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## When to use cupy"
+      ],
+      "metadata": {
+        "id": "Mgq52OY02vFA"
+      }
     },
     {
       "cell_type": "code",
@@ -249,7 +308,7 @@
         "id": "fp1DPYd1iezx",
         "outputId": "47b6ea81-9898-4167-825c-d598e8a8c3b4"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -276,6 +335,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Exercise with Fast Fourier Transforms (FFTs)\n",
         "We can also do FFTs on the GPU with cupy"
       ],
       "metadata": {
@@ -294,7 +354,7 @@
       "metadata": {
         "id": "4yIKzPoOse-q"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
