--- a/1_numpy_vectorize.ipynb
+++ b/1_numpy_vectorize.ipynb
@@ -188,13 +188,11 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "PzIzurUxxKG3"
-      },
-      "execution_count": null,
-      "outputs": []
-    }
+      "cell_type": "markdown",
+      "source": [
+        "For more exercises, you can see [https://www.w3resource.com/python-exercises/numpy/python-numpy-broadcasting.php](https://www.w3resource.com/python-exercises/numpy/python-numpy-broadcasting.php)"
+      ],
+
+    },
   ]
 }
