--- a/1_numpy_vectorize.ipynb
+++ b/1_numpy_vectorize.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOhN00sqda3gkYaBCYIBTX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -188,13 +187,13 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "For more exercises to practice broadcasting, see https://www.w3resource.com/python-exercises/numpy/python-numpy-broadcasting.php"
+      ],
       "metadata": {
-        "id": "PzIzurUxxKG3"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "ffwASiOBl6LD"
+      }
     }
   ]
 }
