--- a/3_numba_jit.ipynb
+++ b/3_numba_jit.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOzgkbdpc6ZF/NWM36fAuxL",
+      "authorship_tag": "ABX9TyNtyxJ+kr6VyiybiRH3vU9z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Just in Time (JIT) compilation with Numba\n",
+        "\n",
         "Numba is a JIT compiler which translates Python code in native machine language. Using special decorators on Python functions Numba compiles them on the fly to machine code using LLVM. Numba is compatible with Numpy arrays which are the basis of many scientific packages in Python. It enables parallelization of machine code so that all the CPU cores are used.\n",
         "\n"
       ],
@@ -40,29 +42,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "evNiohZAxlfN",
-        "outputId": "36879994-795f-4889-f6e0-8c53767fb846"
+        "id": "evNiohZAxlfN"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "CPU times: user 7 µs, sys: 1 µs, total: 8 µs\n",
-            "Wall time: 10.3 µs\n",
-            "CPU times: user 913 ms, sys: 64.4 ms, total: 978 ms\n",
-            "Wall time: 1 s\n",
-            "CPU times: user 5 µs, sys: 0 ns, total: 5 µs\n",
-            "Wall time: 7.15 µs\n",
-            "5997092 False\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import math\n",
         "import numpy as np\n",
@@ -88,6 +72,7 @@
         "# Set \"nopython\" mode for best performance, equivalent to @njit\n",
         "#@numba.njit\n",
         "#@numba.jit(nopython=True)\n",
+        "# You can also save the compiled function with the option cache=True\n",
         "def is_prime_numba(n): # Function is compiled to machine code when called the first time\n",
         "    if n <= 1:\n",
         "        return False\n",
