--- a/4_mpi4py_parallel.ipynb
+++ b/4_mpi4py_parallel.ipynb
@@ -373,7 +373,7 @@
         "There are many different ways to pass mssages:\n",
         "point-to-point, broadcasting, scatter/gather, etc. You can find information on all of the different patterns at [https://mpi4py.readthedocs.io](https://mpi4py.readthedocs.io).\n",
         "\n",
-        "Here, we will"
+        "Here, we will use the scatter and gather patterns."
       ],
       "metadata": {
         "id": "X6_PNsVnAnb0"
