--- a/1_numpy_vectorize.ipynb
+++ b/1_numpy_vectorize.ipynb
@@ -28,7 +28,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Here is a simple example demonstrating vectorization with numpy"
+        "## Vectorization with NumPy\n",
+        "Numpy uses compiled high-performance Fortran libraries which can use **vectorization**, applying the same instruction sets across 4/8/etc inputs simulateously on the CPU.\n",
+        "\n",
+        "Here is a simple example demonstrating vectorization with numpy:"
       ],
       "metadata": {
         "id": "8tAatmNlnNuB"
@@ -173,12 +176,7 @@
       "source": [
         "%%timeit\n",
         "arr1 = np.array([1, 2, 3])\n",
-        "arr2 = np.array([4, 5])\n",
-        "\n",
-        "arr1 = # add the missing code so that these two arrays can be broadcasted\n",
-        "arr2 = # add the missing code so that these two arrays can be broadcasted\n",
-        "\n",
-        "sum = (arr1 * arr2).sum()"
+        "arr2 = np.array([4, 5])"
       ],
       "metadata": {
         "id": "OJ_wVMqZhsXp"
